--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" type="text/css" href="index.css" media="all" />
 
-    <title>This is E-Commerce Website</title>
+    <title>Groc Store</title>
   </head>
 
   <body>
